# systems-thermal-hydraulics

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
examples/: kadmos_loop.py  kadmos_loop_fixed_power.py
src/kadmos_th/: __init__.py  network.py  variable.py
src/kadmos_th/components/: area_change.py  base.py  boundary.py  condenser.py  orifice.py  pipe.py  pump.py
src/kadmos_th/correlations/: __init__.py  heat_transfer.py
src/kadmos_th/props/: __init__.py
src/systems_th/: connection.py  equation.py  solver.py
src/systems_th/components/: __init__.py  core.py  heater.py  mixer.py  separator.py  turbine.py
src/systems_th/correlations/: friction.py  pressure_drop.py
src/systems_th/props/: water_iapws.py
streamlit_app/: app.py  network_builder.py  plotting.py  requirements.txt
tests/: test_dp_models.py  test_smoke_loop.py
