[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systems-th"
version = "0.2.0"
description = "systems-like steady-state thermal-hydraulics network solver inspired by TESPy (two-phase water/steam, IAPWS97)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="systems-TH contributors"}]
dependencies = [
  "numpy>=1.23",
  "iapws>=1.5.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "mypy>=1.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
